--- a/kubernetes/service-app/front-end/values.yaml
+++ b/kubernetes/service-app/front-end/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 2
 
 image:
-  repository: midsmulya/hello-world
+  repository: mirdsmulya/hello-world
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "v0.0.1"
