--- a/kubernetes/service-app/backend/values.yaml
+++ b/kubernetes/service-app/backend/values.yaml
@@ -74,7 +74,7 @@ resources:
 
 
 autoscaling:
-  enabled: false
+  enabled: true
   minReplicas: 1
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
