--- a/kubernetes/service-app/backend/values.yaml
+++ b/kubernetes/service-app/backend/values.yaml
@@ -74,9 +74,9 @@ resources:
 
 
 autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
+  enabled: true
+  minReplicas: 2
+  maxReplicas: 5
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
