reduce replicas to 1

--- a/kubernetes/service-app/backend/values.yaml
+++ b/kubernetes/service-app/backend/values.yaml
@@ -74,7 +74,7 @@ resources:
 
 
 autoscaling:
-  enabled: true
+  enabled: false
   minReplicas: 1
   maxReplicas: 5
   targetCPUUtilizationPercentage: 80
